--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
                               <h2
                                 class="elementor-heading-title elementor-size-default"
                               >
-                                33 GEN1 CHARACTERS
+                                INTRODUCING OUR GAME
                               </h2>
                             </div>
                           </div>
@@ -1309,7 +1309,11 @@
                             data-widget_type="text-editor.default"
                           >
                             <div class="elementor-widget-container">
-                              <p>with meme-tastic names</p>
+                              <p>Create your own trader — or choose from the most iconic ones.
+Then step into the global arena and battle others in real-time trading duels.
+Only one thing matters here: whose strategy actually works.
+
+No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p>
                             </div>
                           </div>
                           <div
