--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
                                     class="elementor-button-content-wrapper"
                                   >
                                     <span class="elementor-button-text"
-                                      >Join $Room</span
+                                      >Play</span
                                     >
                                   </span>
                                 </a>
