--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
                               <div class="elementor-button-wrapper">
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
-                                  href="https://t.me/MyTraderRoom"
+                                  href="play.html"
                                 >
                                   <span
                                     class="elementor-button-content-wrapper"
