--- a/play.html
+++ b/play.html
@@ -6,16 +6,16 @@
   <title>Closed Beta</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background-color: #0a0a0a;
-      color: #fff;
-      font-family: 'Inter', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+  margin: 0;
+  padding: 0;
+  background-image: url('https://www.traderroom.app/assets/background-animation.gif');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  font-family: 'Inter', sans-serif;
+  color: #fff;
+}
+
     .container {
       text-align: center;
       max-width: 400px;
@@ -58,9 +58,21 @@
     button:hover {
       background-color: #38d98e;
     }
+    .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); /* Полупрозрачный чёрный */
+  z-index: 0;
+}
+
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
+
   <div class="container">
     <h1>Closed Beta Access</h1>
     <p>Access is available only with an invitation code.</p>
@@ -69,5 +81,6 @@
       <button type="submit">Enter</button>
     </form>
   </div>
+    
 </body>
 </html>
