--- a/index.html
+++ b/index.html
@@ -1176,6 +1176,7 @@
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
                                   href="play.html"
+                                  style="width:194px; height:56px;"
                                 >
                                   <span
                                     class="elementor-button-content-wrapper"
@@ -1200,6 +1201,7 @@
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
                                   href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                                  style="width:114px; height:56px;"
                                 >
                                   <span
                                     class="elementor-button-content-wrapper"
