--- a/play.html
+++ b/play.html
@@ -5,34 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Closed Beta</title>
   <style>
-    body {
+    /* Подключение шрифта Inter */
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+    /* Сброс стилей и установка основных параметров */
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      height: 100vh;
+      overflow: hidden;
+      position: relative;
       background-color: #0a0a0a;
       color: #fff;
-      font-family: 'Inter', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
+
+    /* Анимированный фон */
+    .background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #0a0a0a;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .square {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: #4bffb3;
+      opacity: 0.1;
+      animation: fall linear infinite;
+    }
+
+    @keyframes fall {
+      0% {
+        transform: translateY(-10px);
+        opacity: 0.1;
+      }
+      100% {
+        transform: translateY(100vh);
+        opacity: 0;
+      }
+    }
+
+    /* Затемнение для улучшения читаемости */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 1;
+    }
+
+    /* Контейнер с формой */
     .container {
+      position: relative;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      padding: 20px;
+    }
+
+    .form-box {
       text-align: center;
       max-width: 400px;
-      width: 95%;
+      width: 100%;
       padding: 20px;
       border: 1px solid #2a2a2a;
       background-color: #111;
       border-radius: 12px;
     }
+
     h1 {
       font-size: 24px;
       margin-bottom: 12px;
     }
+
     p {
       color: #aaa;
       margin-bottom: 24px;
     }
+
     input[type="text"] {
       padding: 12px;
       width: 95%;
@@ -44,6 +110,7 @@
       outline: none;
       margin-bottom: 16px;
     }
+
     button {
       padding: 12px 24px;
       font-size: 16px;
@@ -55,19 +122,48 @@
       transition: background-color 0.2s ease;
       width: 100%;
     }
+
     button:hover {
       background-color: #38d98e;
     }
   </style>
 </head>
 <body>
+  <div class="background" id="background"></div>
+  <div class="overlay"></div>
   <div class="container">
-    <h1>Closed Beta Access</h1>
-    <p>Access is available only with an invitation code.</p>
-    <form action="#" method="POST">
-      <input type="text" placeholder="Enter access code" name="access_code" required />
-      <button type="submit">Enter</button>
-    </form>
+    <div class="form-box">
+      <h1>Closed Beta Access</h1>
+      <p>Access is available only with an invitation code.</p>
+      <form action="#" method="POST">
+        <input type="text" placeholder="Enter access code" name="access_code" required />
+        <button type="submit">Enter</button>
+      </form>
+    </div>
   </div>
+
+  <script>
+    // Генерация падающих квадратиков
+    const background = document.getElementById('background');
+
+    function createSquare() {
+      const square = document.createElement('div');
+      square.classList.add('square');
+      const size = Math.random() * 10 + 5; // Размер от 5px до 15px
+      square.style.width = `${size}px`;
+      square.style.height = `${size}px`;
+      square.style.left = `${Math.random() * window.innerWidth}px`;
+      square.style.animationDuration = `${Math.random() * 5 + 5}s`; // Продолжительность от 5s до 10s
+      background.appendChild(square);
+
+      // Удаление квадратика после завершения анимации
+      setTimeout(() => {
+        square.remove();
+      }, 10000);
+    }
+
+    // Создание квадратиков с интервалом
+    setInterval(createSquare, 200);
+  </script>
 </body>
 </html>
