--- a/play.html
+++ b/play.html
@@ -40,7 +40,7 @@
       position: absolute;
       width: 10px;
       height: 10px;
-      background: #4bffb3;
+      background: #4BFFB3;
       opacity: 0.1;
       animation: fall linear infinite;
     }
@@ -130,7 +130,7 @@
 </head>
 <body>
   <div class="background" id="background"></div>
-  <div class="overlay"></div>
+
   <div class="container">
     <div class="form-box">
       <h1>Closed Beta Access</h1>
