--- a/play.html
+++ b/play.html
@@ -41,8 +41,9 @@
       width: 10px;
       height: 10px;
       background: #4BFFB3;
-      opacity: 1;
+      opacity: 0.1;
       animation: fall linear infinite;
+      filter: brightness(1.5);
     }
 
     @keyframes fall {
