--- a/play.html
+++ b/play.html
@@ -135,8 +135,8 @@
 
   <div class="container">
     <div class="form-box">
-      <h1>Closed Beta Access</h1>
-      <p>Access is available only with an invitation code.</p>
+      <h1>Closed Beta</h1>
+      <p>Access is available only with an invitation code</p>
       <form action="#" method="POST">
         <input type="text" placeholder="Enter access code" name="access_code" required />
         <button type="submit">Enter</button>
