--- a/play.html
+++ b/play.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Closed Beta</title>
   <style>
-    /* Подключение шрифта Inter */
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-    /* Сброс стилей и установка основных параметров */
     * {
       margin: 0;
       padding: 0;
@@ -19,9 +17,9 @@
       font-family: 'Inter', sans-serif;
       height: 100vh;
       overflow: hidden;
-      position: relative;
       background-color: #0a0a0a;
       color: #fff;
+      position: relative;
     }
 
     /* Анимированный фон */
@@ -37,38 +35,23 @@
     }
 
     .square {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: #7fffdf; /* Ярче цвет */
-  box-shadow: 0 0 10px #7fffdf; /* Светящееся свечение */
-  animation: fall linear infinite;
-  opacity: 1; /* Устанавливаем начальную прозрачность */
-}
-
-    @keyframes fall {
-  0% {
-    transform: translateY(-10px);
-    opacity: 1; /* Начальная прозрачность — полностью видим */
-  }
-  100% {
-    transform: translateY(100vh);
-    opacity: 0.3; /* Конечная — всё ещё видно */
-  }
-}
-
-    /* Затемнение для улучшения читаемости */
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      z-index: 1;
+      position: absolute;
+      border-radius: 2px;
+      animation: fall linear infinite;
+      opacity: 1;
     }
 
-    /* Контейнер с формой */
+    @keyframes fall {
+      0% {
+        transform: translateY(-20px);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(100vh);
+        opacity: 0.2;
+      }
+    }
+
     .container {
       position: relative;
       z-index: 2;
@@ -98,7 +81,6 @@
     p {
       color: #aaa;
       margin-bottom: 24px;
-      text-wrap-mode: nowrap;
     }
 
     input[type="text"] {
@@ -145,27 +127,41 @@
   </div>
 
   <script>
-    // Генерация падающих квадратиков
     const background = document.getElementById('background');
+
+    const neonColors = [
+      '#39FF14',  // неоново-зелёный
+      '#00FFC6',  // бирюзовый
+      '#00FFB2',
+      '#32ff7e',
+      '#4bffb3',
+      '#66ffcc',
+      '#80ffe8'
+    ];
 
     function createSquare() {
       const square = document.createElement('div');
       square.classList.add('square');
-      const size = Math.random() * 10 + 5; // Размер от 5px до 15px
+
+      const size = Math.random() * 6 + 4; // 4px–10px
       square.style.width = `${size}px`;
       square.style.height = `${size}px`;
       square.style.left = `${Math.random() * window.innerWidth}px`;
-      square.style.animationDuration = `${Math.random() * 5 + 5}s`; // Продолжительность от 5s до 10s
+
+      const color = neonColors[Math.floor(Math.random() * neonColors.length)];
+      square.style.background = color;
+      square.style.boxShadow = `0 0 8px ${color}, 0 0 16px ${color}`;
+      square.style.animationDuration = `${Math.random() * 4 + 4}s`;
+
       background.appendChild(square);
 
-      // Удаление квадратика после завершения анимации
       setTimeout(() => {
         square.remove();
       }, 10000);
     }
 
-    // Создание квадратиков с интервалом
-    setInterval(createSquare, 200);
+    // Увеличена частота (каждые 70 мс)
+    setInterval(createSquare, 70);
   </script>
 </body>
 </html>
