--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
                               >
                                 <h2 class="bdt-heading-tag" style="opacity: 0">
                                   <span class="bdt-pre-heading"
-                                    >Roleplay as</span
+                                    >Play as</span
                                   >
                                   <span
                                     id="bdt-ah-9a41906"
@@ -1135,7 +1135,7 @@
                                     data-settings='{"layout":"typed","strings":["CZ"," Ansem"," Larry Fink"," SBF"," JPow"," Donald Trump"," Elon Musk"," Many Others"],"typeSpeed":50,"startDelay":100,"backSpeed":100,"backDelay":1250,"loop":true}'
                                   ></span>
                                   <span class="bdt-post-heading"
-                                    >and trade simulated markets</span
+                                    >, test your trading strategy and compete against other players in simulated markets</span
                                   >
                                 </h2>
                               </div>
