--- a/index.html
+++ b/index.html
@@ -972,15 +972,15 @@
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-103"
                     >
                       <a
-                        href="https://raydium.io/swap/?inputMint=sol&outputMint=SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
-                        ><span class="ui-menu-item-wrapper">Buy now</span></a
+                        href="play.html"
+                        ><span class="ui-menu-item-wrapper">Play</span></a
                       >
                     </li>
                     <li
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-104"
                     >
-                      <a href="https://t.me/MyTraderRoom"
-                        ><span class="ui-menu-item-wrapper">Telegram</span></a
+                      <a href=""
+                        ><span class="ui-menu-item-wrapper">Buy Now</span></a
                       >
                     </li>
                     <li
