--- a/index.html
+++ b/index.html
@@ -1776,31 +1776,41 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                         class="elementor-container elementor-column-gap-default"
                       >
                         <div
-                          class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-e34a4b1"
-                          data-id="e34a4b1"
-                          data-element_type="column"
-                        >
-                          <div
-                            class="elementor-widget-wrap elementor-element-populated"
+                            class="elementor-element elementor-element-02aea44 elementor-position-left elementor-vertical-align-middle elementor-widget__width-auto bdt-icon-type-icon bdt-icon-effect-none elementor-invisible elementor-widget elementor-widget-bdt-advanced-icon-box"
+                            data-id="02aea44"
+                            data-element_type="widget"
+                            data-settings='{"_animation":"fadeInDown","ep_sound_effects_active":"yes","ep_sound_effects_event":"hover","ep_sound_effects_source":"hosted_url","ep_sound_effects_hosted_url":{"url":"https:\/\/traderroom.blog\/wp-content\/uploads\/2024\/11\/Stop-Being-Poor-mp3cut.net_.mp3","id":163,"size":"","alt":"","source":"library"},"ep_sound_effects_hosted_url_mp3":{"url":"https:\/\/traderroom.blog\/wp-content\/uploads\/2024\/11\/Stop-Being-Poor-mp3cut.net_.mp3","id":163,"size":"","alt":"","source":"library"},"ep_sound_effects_select_type":"widget","ep_sound_effects_source_local_link":"https:\/\/traderroom.blog\/wp-content\/plugins\/bdthemes-element-pack\/assets\/sounds\/"}'
+                            data-widget_type="bdt-advanced-icon-box.default"
                           >
-                            <div
-                              class="elementor-element elementor-element-2478ef7 elementor-widget elementor-widget-image"
-                              data-id="2478ef7"
-                              data-element_type="widget"
-                              data-widget_type="image.default"
-                            >
-                              <div class="elementor-widget-container">
-                                <img
-                                  width="2560"
-                                  height="2560"
-                                  src="logo.png"
-                                  class="attachment-full size-full wp-image-106"
-                                  alt=""
-                                />
+                            <div class="elementor-widget-container">
+                              <div class="bdt-ep-advanced-icon-box">
+                                <div class="bdt-ep-advanced-icon-box-icon">
+                                  <span
+                                    class="bdt-ep-advanced-icon-box-icon-wrap"
+                                  >
+                                    <svg
+                                      aria-hidden="true"
+                                      class="e-font-icon-svg e-fas-mouse-pointer"
+                                      viewBox="0 0 320 512"
+                                      xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                      <path
+                                        d="M302.189 329.126H196.105l55.831 135.993c3.889 9.428-.555 19.999-9.444 23.999l-49.165 21.427c-9.165 4-19.443-.571-23.332-9.714l-53.053-129.136-86.664 89.138C18.729 472.71 0 463.554 0 447.977V18.299C0 1.899 19.921-6.096 30.277 5.443l284.412 292.542c11.472 11.179 3.007 31.141-12.5 31.141z"
+                                      ></path>
+                                    </svg>
+                                  </span>
+                                </div>
+
+                                <div class="bdt-ep-advanced-icon-box-content">
+                                  <h5
+                                    class="bdt-ep-advanced-icon-box-title ep-title-"
+                                  >
+                                    <span> TRADER ROOM </span>
+                                  </h5>
+                                </div>
                               </div>
                             </div>
                           </div>
-                        </div>
 
                         <div
                           class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-2ffe2f3"
