--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                                 class="bdt-heading bdt-heading-layout-typed"
                               >
                                 <h2 class="bdt-heading-tag" style="opacity: 0">
-                                  <span class="bdt-pre-heading"
+                                  <span class="bdt-pre-heading" style="font-size: 14px;"
                                     >Play as</span
                                   >
                                   <span
