--- a/index.html
+++ b/index.html
@@ -1126,15 +1126,16 @@
                                 class="bdt-heading bdt-heading-layout-typed"
                               >
                                 <h2 class="bdt-heading-tag" style="opacity: 0">
-                                  <span class="bdt-pre-heading" style="font-size: 14px;"
+                                  <span class="bdt-pre-heading" style="font-size: 30px;"
                                     >Play as</span
                                   >
                                   <span
+                                    style="font-size: 30px;"
                                     id="bdt-ah-9a41906"
                                     class="bdt-animated-heading"
                                     data-settings='{"layout":"typed","strings":["CZ"," Ansem"," Larry Fink"," SBF"," JPow"," Donald Trump"," Elon Musk"," Many Others"],"typeSpeed":50,"startDelay":100,"backSpeed":100,"backDelay":1250,"loop":true}'
                                   ></span>
-                                  <span class="bdt-post-heading"
+                                  <span class="bdt-post-heading" style="font-size: 30px;"
                                     >, test your trading strategy and compete against other players in simulated markets</span
                                   >
                                 </h2>
