--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
                                     data-settings='{"layout":"typed","strings":["CZ"," Ansem"," Larry Fink"," SBF"," JPow"," Donald Trump"," Elon Musk"," Many Others"],"typeSpeed":50,"startDelay":100,"backSpeed":100,"backDelay":1250,"loop":true}'
                                   ></span>
                                   <span class="bdt-post-heading" style="font-size: 30px; display: inline; line-height: 1; vertical-align: middle;"
-                                    >,test your trading strategy and compete against other players in simulated markets</span
+                                    >test your trading strategy and compete against other players in simulated markets</span
                                   >
                                 </h2>
                               </div>
