--- a/play.html
+++ b/play.html
@@ -118,7 +118,7 @@
   <!-- Твой блок формы -->
   <div class="container">
     <div class="form-box">
-      <h1>Closed Beta</h1>
+      <h1>Private Launch</h1>
       <p>Access is available only with an invitation code</p>
       <form action="#" method="POST">
         <input type="text" placeholder="Enter access code" name="access_code" required />
