--- a/index.html
+++ b/index.html
@@ -1926,7 +1926,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                       data-widget_type="text-editor.default"
                     >
                       <div class="elementor-widget-container">
-                        <p>© 2025 $ROOM. All Rights Reserved.</p>
+                        <p>© 2025 Trader Room. All Rights Reserved.</p>
                       </div>
                     </div>
                   </div>
