--- a/index.html
+++ b/index.html
@@ -1822,10 +1822,10 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
 
                                   <li class="elementor-icon-list-item">
                                     <a
-                                      href="https://raydium.io/swap/?inputMint=sol&outputMint=SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                                      href="https://jup.ag/"
                                     >
                                       <span class="elementor-icon-list-text"
-                                        >Raydium</span
+                                        >Jupiter</span
                                       >
                                     </a>
                                   </li>
