--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-103"
                     >
                       <a
-                        href="game"
+                        href="/game"
                         ><span class="ui-menu-item-wrapper">Play</span></a
                       >
                     </li>
