--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@
                               <div class="elementor-button-wrapper">
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
-                                  href="play.html"
+                                  href="/game"
                                   style="width:194px; height:56px;"
                                 >
                                   <span
