--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                         class="bdt-timeline-desc bdt-padding"
                                       >
                                         <h4 class="bdt-timeline-title">
-                                          Trader Room Early Access
+                                          Game Private Access
                                         </h4>
                                         <ul
                                           class="bdt-timeline-meta bdt-subnav bdt-flex-middle"
@@ -1512,7 +1512,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                         class="bdt-timeline-desc bdt-padding"
                                       >
                                         <h4 class="bdt-timeline-title">
-                                          Game Beta Launch
+                                          Game Open Launch
                                         </h4>
                                         <ul
                                           class="bdt-timeline-meta bdt-subnav bdt-flex-middle"
@@ -1535,12 +1535,12 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                         class="bdt-timeline-desc bdt-padding"
                                       >
                                         <h4 class="bdt-timeline-title">
-                                          Official Game Launch
+                                          Apps for iOS/Android
                                         </h4>
                                         <ul
                                           class="bdt-timeline-meta bdt-subnav bdt-flex-middle"
                                         >
-                                          <li>August 2025</li>
+                                          <li>June 2025</li>
                                         </ul>
                                       </div>
                                     </div>
@@ -1563,7 +1563,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                         <ul
                                           class="bdt-timeline-meta bdt-subnav bdt-flex-middle"
                                         >
-                                          <li>November 2025</li>
+                                          <li>August 2025</li>
                                         </ul>
                                       </div>
                                     </div>
