--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
                               >
                                 <video
                                   class="elementor-video"
-                                  src="room.mp4"
+                                  src="room.gif"
                                   autoplay=""
                                   loop=""
                                   muted="muted"
