--- a/index.html
+++ b/index.html
@@ -1934,7 +1934,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
         class="uicore-navigation-wrapper uicore-navbar elementor-section elementor-section-boxed uicore-mobile-menu-wrapper"
       >
         <nav class="uicore elementor-container">
-          <div class="uicore-branding uicore-mobile">
+          <div class="uicore-branding uicore-mobile"style="">
             <a href="/" rel="home">
               <img
                 class="uicore uicore-logo"
