--- a/index.html
+++ b/index.html
@@ -1934,15 +1934,13 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
         class="uicore-navigation-wrapper uicore-navbar elementor-section elementor-section-boxed uicore-mobile-menu-wrapper"
       >
         <nav class="uicore elementor-container">
-          <div class="uicore-branding uicore-mobile"style="">
-            <a href="/" rel="home">
-              <img
-                class="uicore uicore-logo"
-                src="logo.png"
-                alt="TRADER ROOM"
-              />
-            </a>
-          </div>
+          <div class="uicore-branding uicore-mobile">
+  <a href="/" rel="home" class="branding-link">
+    <img class="uicore-logo" src="logo.png" alt="Logo" />
+    <span class="branding-text">TRADER ROOM</span>
+  </a>
+</div>
+
 
           <div class="uicore-branding uicore-desktop"></div>
 
