--- a/index.html
+++ b/index.html
@@ -1886,6 +1886,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                       @media (min-width: 1000px) {
                         .elementor-element-e34a4b1 {
                           order: 1; /* Первая колонка */
+                          margin-left: auto;
                         }
                         .elementor-element-2ffe2f3 {
                           order: 2; /* Вторая колонка */
