--- a/index.html
+++ b/index.html
@@ -1883,6 +1883,35 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                       </div>
                     </section>
                     <style>
+                      @media (max-width: 768px) {
+  .uicore-mobile {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .branding-link {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* расстояние между картинкой и текстом */
+    text-decoration: none;
+  }
+
+  .branding-text {
+    font-family: 'Press Start 2P', monospace; /* если такой шрифт, можно сменить */
+    font-size: 14px;
+    color: #fff;
+    white-space: nowrap;
+  }
+
+  .uicore-logo {
+    width: 24px;
+    height: 24px;
+  }
+}
+
                       @media (min-width: 1000px) {
                         .elementor-element-e34a4b1 {
                           order: 1; /* Первая колонка */
