--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                     <li
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-104"
                     >
-                      <a href=""
+                      <a href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
                         ><span class="ui-menu-item-wrapper">Buy Now</span></a
                       >
                     </li>
