--- a/index.html
+++ b/index.html
@@ -1733,11 +1733,10 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                         class="elementor-container elementor-column-gap-default"
                       >
                         <div
-                            class="elementor-element elementor-element-02aea44 elementor-position-left elementor-vertical-align-middle elementor-widget__width-auto bdt-icon-type-icon bdt-icon-effect-none elementor-invisible elementor-widget elementor-widget-bdt-advanced-icon-box"
-                            data-id="02aea44"
-                            data-element_type="widget"
-                            data-settings='{"_animation":"fadeInDown","ep_sound_effects_active":"yes","ep_sound_effects_event":"hover","ep_sound_effects_source":"hosted_url","ep_sound_effects_hosted_url":{"url":"https:\/\/traderroom.blog\/wp-content\/uploads\/2024\/11\/Stop-Being-Poor-mp3cut.net_.mp3","id":163,"size":"","alt":"","source":"library"},"ep_sound_effects_hosted_url_mp3":{"url":"https:\/\/traderroom.blog\/wp-content\/uploads\/2024\/11\/Stop-Being-Poor-mp3cut.net_.mp3","id":163,"size":"","alt":"","source":"library"},"ep_sound_effects_select_type":"widget","ep_sound_effects_source_local_link":"https:\/\/traderroom.blog\/wp-content\/plugins\/bdthemes-element-pack\/assets\/sounds\/"}'
-                            data-widget_type="bdt-advanced-icon-box.default"
+                            class="elementor-element elementor-element-38f0ef0 elementor-widget elementor-widget-heading"
+                              data-id="38f0ef0"
+                              data-element_type="widget"
+                              data-widget_type="heading.default"
                           >
                             <div class="elementor-widget-container">
                               <div class="bdt-ep-advanced-icon-box">
