--- a/index.html
+++ b/index.html
@@ -1757,9 +1757,9 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                   </span>
                                 </div>
 
-                                <div class="bdt-ep-advanced-icon-box-content">
+                                <div class="elementor-widget-container">
                                   <h5
-                                    class="bdt-ep-advanced-icon-box-title ep-title-"
+                                    class="elementor-heading-title elementor-size-default"
                                   >
                                     <span> TRADER ROOM </span>
                                   </h5>
