--- a/index.html
+++ b/index.html
@@ -1732,29 +1732,42 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                       <div
                         class="elementor-container elementor-column-gap-default"
                       >
-                       <div
-                          class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-2ffe2f3"
-                          data-id="2ffe2f3"
-                          data-element_type="column"
-                        >
-                          <div
-                            class="elementor-widget-wrap elementor-element-populated"
-                          >
-                            <div
-                              class="elementor-element elementor-element-38f0ef0 elementor-widget elementor-widget-heading"
+                        <div
+                            class="elementor-element elementor-element-38f0ef0 elementor-widget elementor-widget-heading"
                               data-id="38f0ef0"
                               data-element_type="widget"
                               data-widget_type="heading.default"
-                            >
-                              <div class="elementor-widget-container">
-                                <h4
-                                  class="elementor-heading-title elementor-size-default"
-                                >
-                                  Trader Room
-                                </h4>
+                          >
+                            <div class="elementor-widget-container">
+                              <div class="bdt-ep-advanced-icon-box">
+                                <div class="bdt-ep-advanced-icon-box-icon">
+                                  <span
+                                    class="bdt-ep-advanced-icon-box-icon-wrap"
+                                  >
+                                    <svg
+                                      aria-hidden="true"
+                                      class="e-font-icon-svg e-fas-mouse-pointer"
+                                      viewBox="0 0 320 512"
+                                      xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                      <path
+                                        d="M302.189 329.126H196.105l55.831 135.993c3.889 9.428-.555 19.999-9.444 23.999l-49.165 21.427c-9.165 4-19.443-.571-23.332-9.714l-53.053-129.136-86.664 89.138C18.729 472.71 0 463.554 0 447.977V18.299C0 1.899 19.921-6.096 30.277 5.443l284.412 292.542c11.472 11.179 3.007 31.141-12.5 31.141z"
+                                      ></path>
+                                    </svg>
+                                  </span>
+                                </div>
+
+                                <div class="elementor-widget-container">
+                                  <h5
+                                    class="elementor-heading-title elementor-size-default"
+                                  >
+                                    <span> TRADER ROOM </span>
+                                  </h5>
+                                </div>
                               </div>
                             </div>
-                        
+                          </div>
+
                         <div
                           class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-2ffe2f3"
                           data-id="2ffe2f3"
