--- a/index.html
+++ b/index.html
@@ -1740,7 +1740,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                           >
                             <div class="elementor-widget-container">
                               <div class="bdt-ep-advanced-icon-box">
-                                <div class="bdt-ep-advanced-icon-box-icon">
+                                <div class="bdt-ep-advanced-icon-box-icon"style="margin-left:80px;">
                                   <span
                                     class="bdt-ep-advanced-icon-box-icon-wrap"
                                   >
@@ -1760,6 +1760,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                 <div class="elementor-widget-container">
                                   <h5
                                     class="elementor-heading-title elementor-size-default"
+                                    style="margin-left:80px;"
                                   >
                                     <span> TRADER ROOM </span>
                                   </h5>
