--- a/index.html
+++ b/index.html
@@ -2003,7 +2003,14 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                   ><span class="ui-menu-item-wrapper">Buy now</span></a
                 >
               </li>
-
+              <li
+                class="menu-item menu-item-type-custom menu-item-object-custom menu-item-103"
+              >
+                <a
+                  href="/game"
+                  ><span class="ui-menu-item-wrapper">Play</span></a
+                >
+              </li>
               <li
                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-105"
               >
